--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-14  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-10-13  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British English translation.
