--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-15  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-program-choosing.c (nautilus_launch_show_file):
+	Slightly better error when there is no handler for a file type.
+	Not ideal, needs fixing when we're not string frozen anymore.
+
 2004-10-14  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c: (load_directory),
