--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-17  Raphael Higino  <raphaelh@cvs.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2004-10-17  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
