--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-10-18  Dave Camp  <dave@novell.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(selection_changed_callback):
+	* src/nautilus-application.c:
+	(nautilus_application_present_spatial_window),
+	(nautilus_application_present_spatial_window_with_selection):
+	* src/nautilus-application.h:
+	* src/nautilus-window-manage-views.c: (open_location),
+	(load_directory_metadata_callback):
+	* src/nautilus-window.c: (nautilus_window_go_to_with_selection):
+	* src/nautilus-window.h:  Show the directory as a selection in
+	spatial mode when Alt+Up is selected.  
+
+	Patch from Jimmy Do <crispyleaves@gmail.com>
+
 2004-10-18  Marco Pesenti Gritti  <marco@gnome.org>
 
 	reviewed by: Alexander Larsson  <alexl@redhat.com>
