--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-19  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2004-10-19  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
