Add missing G_END_DECLS. Patch from Jimmy Do <crispyleaves@gmail.com>
2004-10-25  Alexander Larsson  <alexl@redhat.com>

	* libnautilus/nautilus-scroll-positionable.h:
	Add missing G_END_DECLS.
	Patch from Jimmy Do <crispyleaves@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-25  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus/nautilus-scroll-positionable.h:
+	Add missing G_END_DECLS.
+	Patch from Jimmy Do <crispyleaves@gmail.com>
+
 2004-10-22  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
