Fix warning due to NULL default string.
2004-10-28  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-global-preferences.c:
	* src/nautilus-window-manage-views.c:
	Fix warning due to NULL default string.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-28  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-global-preferences.c:
+	* src/nautilus-window-manage-views.c:
+	Fix warning due to NULL default string.
+
 2004-10-26  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-global-preferences.[ch]:
