--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-10-28  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release.
+
+	* configure.in:
+	Require eel 2.8.2
+
+2004-10-28  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-utilities.c:
 	(nautilus_get_uri_shortname_for_display):
 	* libnautilus-private/nautilus-file-utilities.h:
@@ -159,17 +167,6 @@
 	Delay activation when keyboard navigating the tree.
 
 	Patches from Danny Milosavljevic <danny.milo@gmx.net>
-
-2004-10-13  Alexander Larsson  <alexl@redhat.com>
-
-	reviewed by: <delete if not using a buddy>
-
-	* libnautilus-private/nautilus-directory-async.c:
-	(read_dot_hidden_file):
-	* src/file-manager/fm-tree-view.c:
-	(selection_changed_timer_callback), (selection_changed_callback),
-	(create_tree), (tree_activate_callback),
-	(fm_tree_view_instance_init), (fm_tree_view_dispose):
 
 2004-10-12  Anders Carlsson  <andersca@gnome.org>
 
