--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-10-28  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.8.2 ===
+
+2004-10-28  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release.
 
