--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-11-05  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-directory-background.c:
+	Fix spew
+	
+	* libnautilus-private/nautilus-sidebar-factory.h:
+	* libnautilus-private/nautilus-window-info.[ch]:
+	* src/nautilus-application.c:
+	* src/nautilus-information-panel.[ch]:
+	* src/nautilus-navigation-window.c:
+	* src/nautilus-side-pane.c:
+	* src/nautilus-window.c:
+	More work on sidebars. Now the information sidebar works.
+
 2004-11-04  Alexander Larsson  <alexl@redhat.com>
 
 	* Makefile.am:
