Updated German transaltion.
2004-11-05  Hendrik Brandt  <hebra@cvs.gnome.org>

        * de.po: Updated German transaltion.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-05  Hendrik Brandt  <hebra@cvs.gnome.org>
+
+	* de.po: Updated German transaltion.
+
 === nautilus 2.8.2 ===
 
 2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>
