ChangeLog for all this

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,42 @@
+2004-11-05  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* COPYING: Remove comment about Eazel trademarks
+	* COPYING-DOCS: Remove
+	* configure.in: Don't check for jw as we don't need it.
+	* help/.cvsignore: Remove all these:
+	* help/nautilus-quick-reference/.cvsignore:
+	* help/nautilus-quick-reference/C/.cvsignore:
+	* help/nautilus-quick-reference/es/.cvsignore:
+	* help/nautilus-quick-reference/ko/.cvsignore:
+	* help/nautilus-quick-reference/no/.cvsignore:
+	* help/nautilus-quick-reference/sv/.cvsignore:
+	* help/nautilus-release-notes/.cvsignore:
+	* help/nautilus-release-notes/C/.cvsignore:
+	* help/nautilus-screenshot-guidelines/.cvsignore:
+	* help/nautilus-screenshot-guidelines/C/.cvsignore:
+	* help/nautilus-screenshot-guidelines/C/figures/callout_after.png:
+	* help/nautilus-screenshot-guidelines/C/figures/callout_before.png:
+	* help/nautilus-screenshot-guidelines/C/figures/circle_callout_afte
+	r.png:
+	* help/nautilus-screenshot-guidelines/C/figures/circle_callout_befo
+	re.png:
+	* help/nautilus-screenshot-guidelines/C/figures/dropshadow_after.pn
+	g:
+	* help/nautilus-screenshot-guidelines/C/figures/dropshadow_before.p
+	ng:
+	* omf-install/.cvsignore:
+	* omf-install/Makefile.am:
+	* user-guide/.cvsignore:
+	* user-guide/C/.cvsignore:
+	* user-guide/Makefile.am:
+	* user-guide/NOTICE:
+	* user-guide/gnufdl/.cvsignore:
+	* user-guide/gnufdl/Makefile.am:
+	* user-guide/gnufdl/gnufdl.sgml:
+	* user-guide/gnugpl/.cvsignore:
+	* user-guide/gnugpl/Makefile.am:
+	* user-guide/gnugpl/gnugpl.sgml: Remove cruft!
+
 2004-10-29  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c: (fm_list_view_reveal_selection),
