--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-11-08  Alexander Larsson  <alexl@redhat.com>
 
+	* src/Makefile.am:
+	* src/nautilus-application.c: (nautilus_application_instance_init):
+	* src/nautilus-notes-sidebar.[ch]:
+	* src/nautilus-notes-viewer.[ch]:
+	Turn NautilusNotesSidebar into NautilusNotesViewer that is also a
+	property page
+
+2004-11-08  Alexander Larsson  <alexl@redhat.com>
+
 	* components/Makefile.am:
 	Remove emblem subdir
 	
