--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-11-08  Alexander Larsson  <alexl@redhat.com>
 
+	* components/Makefile.am:
+	Remove image_properties subdir
+	
+	* src/Makefile.am:
+	* src/nautilus-application.c: (nautilus_application_instance_init):
+	* src/nautilus-image-properties-page.[ch]:
+	Image property page using new system
+	
+	* src/nautilus-notes-viewer.c:
+	add static
+
+2004-11-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/Makefile.am:
 	* libnautilus-private/nautilus-sidebar-factory.c:
 	* libnautilus-private/nautilus-sidebar-factory.h:
