Remove some BONOBO TODOs
2004-11-08  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-navigation-window.c:
	(nautilus_navigation_window_set_up_sidebar):
	* src/nautilus-window-manage-views.c:
	(viewed_file_changed_callback):
	Remove some BONOBO TODOs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-11-08  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-navigation-window.c:
+	(nautilus_navigation_window_set_up_sidebar):
+	* src/nautilus-window-manage-views.c:
+	(viewed_file_changed_callback):
+	Remove some BONOBO TODOs
+
+2004-11-08  Alexander Larsson  <alexl@redhat.com>
+
 	* components/Makefile.am:
 	Remove image_properties subdir
 	
