fixed strings which had mnemonics but should not - Fixes
	* pt_BR.po: fixed strings which had mnemonics but
	  should not
	- Fixes http://bugzilla.gnome.org/show_bug.cgi?id=157252

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-09  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po: fixed strings which had mnemonics but
+	  should not 
+	- Fixes http://bugzilla.gnome.org/show_bug.cgi?id=157252
+
 2004-11-05  Hendrik Brandt  <hebra@cvs.gnome.org>
 
 	* de.po: Updated German transaltion.
