--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-28 17:11+0200\n"
-"PO-Revision-Date: 2004-08-23 18:58-0300\n"
+"PO-Revision-Date: 2004-11-09 00:02-0200\n"
 "Last-Translator: Raphael Higino <raphaelh@uai.com.br>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
@@ -4509,28 +4509,28 @@ msgstr "Carregando..."
 
 #: src/file-manager/fm-tree-view.c:1068
 msgid "Open"
-msgstr "_Abrir"
+msgstr "Abrir"
 
 #. add the "create folder" menu item
 #: src/file-manager/fm-tree-view.c:1092
 msgid "Create Folder"
-msgstr "Criar _Pasta"
+msgstr "Criar Pasta"
 
 #: src/file-manager/fm-tree-view.c:1108
 msgid "Cut Folder"
-msgstr "Recor_tar Pasta"
+msgstr "Recortar Pasta"
 
 #: src/file-manager/fm-tree-view.c:1122
 msgid "Copy Folder"
-msgstr "_Copiar Pasta"
+msgstr "Copiar Pasta"
 
 #: src/file-manager/fm-tree-view.c:1136
 msgid "Paste Files into Folder"
-msgstr "C_olar Arquivos na Pasta"
+msgstr "Colar Arquivos na Pasta"
 
 #: src/file-manager/fm-tree-view.c:1154
 msgid "Move to Trash"
-msgstr "_Mover para a Lixeira"
+msgstr "Mover para a Lixeira"
 
 #: src/file-manager/fm-tree-view.c:1222
 msgid "Filesystem"
