--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-09  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po: fixed strings which had mnemonics but
+	  should not (fix up-ported from gnome-2-8 branch)
+	- Fixes http://bugzilla.gnome.org/show_bug.cgi?id=157252
+
 === nautilus 2.8.2 ===
 
 2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>
