Remove all traces of old medusa support.
2004-11-09  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-lib-self-check-functions.h:
	* libnautilus-private/nautilus-medusa-support.[ch]:
	* libnautilus-private/nautilus-metafile.c:
	* libnautilus-private/nautilus-search-uri.[ch]:
	* src/Makefile.am:
	* src/file-manager/Makefile.am:
	* src/file-manager/fm-search-list-view.[ch]:
	* src/file-manager/nautilus-indexing-info.[ch]:
	* src/file-manager/nautilus-search-list-view-ui.xml:
	* src/nautilus-application.c:
	* src/nautilus-complex-search-bar.[ch]:
	* src/nautilus-navigation-window-menus.c:
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-navigation-window.[ch]:
	* src/nautilus-search-bar-criterion-private.h:
	* src/nautilus-search-bar-criterion.[ch]:
	* src/nautilus-search-bar-private.h:
	* src/nautilus-search-bar.[ch]:
	* src/nautilus-shell-ui.xml:
	* src/nautilus-sidebar-title.c:
	* src/nautilus-simple-search-bar.[ch]:
	* src/nautilus-spatial-window.c:
	* src/nautilus-switchable-navigation-bar.[ch]:
	* src/nautilus-switchable-search-bar.[ch]:
	* src/nautilus-window-manage-views.c:
	* src/nautilus-window-menus.c:
	* src/nautilus-window.c:
	Remove all traces of old medusa support.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,39 @@
 2004-11-09  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	* libnautilus-private/Makefile.am:
+	* libnautilus-private/nautilus-directory-async.c:
+	* libnautilus-private/nautilus-lib-self-check-functions.h:
+	* libnautilus-private/nautilus-medusa-support.[ch]:
+	* libnautilus-private/nautilus-metafile.c:
+	* libnautilus-private/nautilus-search-uri.[ch]:
+	* src/Makefile.am:
+	* src/file-manager/Makefile.am:
+	* src/file-manager/fm-search-list-view.[ch]:
+	* src/file-manager/nautilus-indexing-info.[ch]:
+	* src/file-manager/nautilus-search-list-view-ui.xml:
+	* src/nautilus-application.c:
+	* src/nautilus-complex-search-bar.[ch]:
+	* src/nautilus-navigation-window-menus.c:
+	* src/nautilus-navigation-window-ui.xml:
+	* src/nautilus-navigation-window.[ch]:
+	* src/nautilus-search-bar-criterion-private.h:
+	* src/nautilus-search-bar-criterion.[ch]:
+	* src/nautilus-search-bar-private.h:
+	* src/nautilus-search-bar.[ch]:
+	* src/nautilus-shell-ui.xml:
+	* src/nautilus-sidebar-title.c:
+	* src/nautilus-simple-search-bar.[ch]:
+	* src/nautilus-spatial-window.c:
+	* src/nautilus-switchable-navigation-bar.[ch]:
+	* src/nautilus-switchable-search-bar.[ch]:
+	* src/nautilus-window-manage-views.c:
+	* src/nautilus-window-menus.c:
+	* src/nautilus-window.c:
+	Remove all traces of old medusa support.
+	
+2004-11-09  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-factory.[ch]:
 	(nautilus_get_relative_icon_size_for_zoom_level):
 	New function.
