Remove some unused bonobo extensions.
2004-11-09  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-bonobo-extensions.[ch]:
	Remove some unused bonobo extensions.

	* libnautilus-private/Makefile.am:
	* src/nautilus-navigation-window.c:
	* src/nautilus-property-browser.c:
	* src/nautilus-spatial-window.c:
	* src/nautilus-window.c:
	* libnautilus-private/nautilus-drag-window.[ch]:
	Remove NautilusDragWindow (not used anyway)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-11-09  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-bonobo-extensions.[ch]:
+	Remove some unused bonobo extensions.
+	
+	* libnautilus-private/Makefile.am:
+	* src/nautilus-navigation-window.c:
+	* src/nautilus-property-browser.c:
+	* src/nautilus-spatial-window.c:
+	* src/nautilus-window.c:
+	* libnautilus-private/nautilus-drag-window.[ch]:
+	Remove NautilusDragWindow (not used anyway)
+
+2004-11-09  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	* libnautilus-private/Makefile.am:
 	* libnautilus-private/nautilus-directory-async.c:
