install nautilus-file-management-properties.desktop in
2004-11-09  Mark McLoughlin  <mark@skynet.ie>

        * Makefile.am: install nautilus-file-management-properties.desktop
        in $(datadir)/applications

        * nautilus-file-management-properties.desktop.in:
        add OnlyShowIn=GNOME;

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-09  Mark McLoughlin  <mark@skynet.ie>
+
+	* Makefile.am: install nautilus-file-management-properties.desktop
+	in $(datadir)/applications
+
+	* nautilus-file-management-properties.desktop.in:
+	add OnlyShowIn=GNOME;
+
 2004-10-29  Iain <iaingnome@gmail.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c 
