--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-11  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2004-11-09  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: fixed strings which had mnemonics but
