--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-13  Meelad Zakaria  <meelad@bamdad.org>
+
+	* fa.po: Updated Persian translation.
+
 2004-11-11  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated translation by
