--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-14  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
 2004-11-09  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: fixed strings which had mnemonics but
