Updated Persian translation.
2004-11-15  Meelad Zakaria  <meelad@bamdad.org>

	* fa.po: Updated Persian translation.

--- a/po/fa.po
+++ b/po/fa.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-01 05:22+0100\n"
-"PO-Revision-Date: 2004-11-13 15:48+0330\n"
+"PO-Revision-Date: 2004-11-15 15:48+0330\n"
 "Last-Translator: Meelad Zakaria <meelad@bamdad.org>\n"
 "Language-Team: Persian <farsi@lists.sharif.edu>\n"
 "MIME-Version: 1.0\n"
@@ -1977,11 +1977,11 @@ msgstr "؟ بایت"
 
 #: libnautilus-private/nautilus-file.c:4681
 msgid "unknown type"
-msgstr "نوع ناشناخته"
+msgstr "نوع نامعلوم"
 
 #: libnautilus-private/nautilus-file.c:4684
 msgid "unknown MIME type"
-msgstr "نوع MIME ناشناخته"
+msgstr "نوع MIME نامعلوم"
 
 #. Fallback, use for both unknown attributes and attributes
 #. * for which we have no more appropriate default.
@@ -1989,7 +1989,7 @@ msgstr "نوع MIME ناشناخته"
 #: libnautilus-private/nautilus-file.c:4690
 #: src/file-manager/fm-properties-window.c:1204
 msgid "unknown"
-msgstr "ناشناخته"
+msgstr "نامعلوم"
 
 #: libnautilus-private/nautilus-file.c:4723
 msgid "program"
