--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-15  Meelad Zakaria  <meelad@bamdad.org>
+
+	* fa.po: Updated Persian translation.
+
 2004-11-14  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
