--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-19  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-11-15  Meelad Zakaria  <meelad@bamdad.org>
 
 	* fa.po: Updated Persian translation.
