--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-20  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Fixed typos.
+
 2004-11-14  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
