--- a/po/sk.po
+++ b/po/sk.po
@@ -8,6 +8,9 @@
 # Stanislav Višňovský <visnovsky@nenya.ms.mff.cuni.cz>, 2002.
 # Stanislav Visnovsky <visnovsky@kde.org>, 2003.
 # Stanislav Visnovsky <visnov@suse.cz>, 2003.
+#
+# $Id$
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD\n"
@@ -5473,7 +5476,7 @@ msgstr "Zobraziť _text v ikonách:"
 
 #: src/nautilus-file-management-properties.glade.h:66
 msgid "Sort _folders before files"
-msgstr "_Priečinky pre súbormi"
+msgstr "_Priečinky pred súbormi"
 
 #: src/nautilus-file-management-properties.glade.h:67
 msgid "View _new folders using:"
@@ -6474,7 +6477,7 @@ msgstr "Prejsť na Tento počítač"
 
 #: src/nautilus-spatial-window-ui.xml.h:11
 msgid "Open _Location..."
-msgstr "Otvori u_miestnenie..."
+msgstr "Otvoriť u_miestnenie..."
 
 #: src/nautilus-spatial-window-ui.xml.h:12
 msgid "Open _Parent"
